WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37481
Minor fix to pass RenderProgress instead of RenderObject
https://bugs.webkit.org/show_bug.cgi?id=37481
Summary
Minor fix to pass RenderProgress instead of RenderObject
Yael
Reported
2010-04-12 20:15:02 PDT
Per
https://bugs.webkit.org/show_bug.cgi?id=37275#c4
, should pass RenderProgress* instead of RenderObject* to AccessibilityProgressIndicator::create().
Attachments
Patch, minor.
(3.44 KB, patch)
2010-04-12 20:19 PDT
,
Yael
vestbo
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2010-04-12 20:19:58 PDT
Created
attachment 53215
[details]
Patch, minor.
WebKit Commit Bot
Comment 2
2010-04-12 21:43:19 PDT
Comment on
attachment 53215
[details]
Patch, minor. Rejecting patch 53215 from commit-queue. Unexpected failure when landing patch! Please file a bug against webkit-patch. Failed to run "['WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--test', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', '53215', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: mon/config/committers.py:275: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal if committer.full_name == name: Tor Arne Vestbø found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Eric Seidel (no email)
Comment 3
2010-04-13 08:44:56 PDT
Tor strikes again! We need to fix committers.py to like him. Setting cq+ again is not the solution, I have a bug to fix here first.
Eric Seidel (no email)
Comment 4
2010-04-13 09:40:52 PDT
The reviewer_text string parsed with ChangeLogEntry._parse_entry() does not seem to be unicode. When I attempt to convert it to unicode I get: Parsing ChangeLog: /Projects/WebKit/WebCore/ChangeLog Traceback (most recent call last): File "/Projects/WebKit/WebKitTools/Scripts/webkit-patch", line 56, in <module> main() File "/Projects/WebKit/WebKitTools/Scripts/webkit-patch", line 51, in main WebKitPatch(__file__).main() File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/tool/multicommandtool.py", line 302, in main result = command.check_arguments_and_execute(options, args, self) File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/tool/multicommandtool.py", line 113, in check_arguments_and_execute return self.execute(options, args, tool) or 0 File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/tool/commands/upload.py", line 57, in execute print "%s" % tool.checkout().commit_message_for_this_commit().message() File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/common/checkout/api.py", line 99, in commit_message_for_this_commit changelog_entry = ChangeLog(changelog_path).latest_entry() File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/common/checkout/changelog.py", line 121, in latest_entry return self.parse_latest_entry_from_file(changelog_file) File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/common/checkout/changelog.py", line 114, in parse_latest_entry_from_file return ChangeLogEntry(''.join(entry_lines[:-1])) File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/common/checkout/changelog.py", line 53, in __init__ self._parse_entry() File "/Projects/WebKit/WebKitTools/Scripts/webkitpy/common/checkout/changelog.py", line 66, in _parse_entry print unicode(self._reviewer_text) UnicodeDecodeError: 'ascii' codec can't decode byte 0xc3 in position 14: ordinal not in range(128)
WebKit Commit Bot
Comment 5
2010-04-13 11:07:10 PDT
Comment on
attachment 53215
[details]
Patch, minor. Rejecting patch 53215 from commit-queue. Unexpected failure when landing patch! Please file a bug against webkit-patch. Failed to run "['WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--test', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', '53215', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: mon/config/committers.py:275: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal if committer.full_name == name: Tor Arne Vestbø found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Yael
Comment 6
2010-04-13 11:18:44 PDT
Committed in
r57527
.
Eric Seidel (no email)
Comment 7
2010-04-13 11:22:54 PDT
I have a fix, will post.
Eric Seidel (no email)
Comment 8
2010-04-13 11:33:35 PDT
Fixed in
bug 37511
. Sorry for the trouble.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug