Minor fix to pass RenderProgress instead of RenderObject https://bugs.webkit.org/show_bug.cgi?id=37481

Reviewed by Tor Arne Vestbo.

* accessibility/AXObjectCache.cpp:
* accessibility/AccessibilityProgressIndicator.cpp:
* accessibility/AccessibilityProgressIndicator.h:



Canonical link: https://commits.webkit.org/48815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57527 268f45cc-cd09-0410-ab3c-d52691b4dbfc